Add use case GetAllCharacters